client/src/components/nav/nav.scss
@import '../../scss/vars';
@import '../../scss/mixins/submit-button';
.navbar {
  position:fixed;
  height:70px;
  box-shadow:0 4px 5px rgb(0 0 0 / 7%);
  z-index: 30;
  width:100%;
  top: 0;
  left:0;
  background: #fff;
}

.container {
  display:flex;
  flex-direction:row;
  justify-content: space-between;
  align-items:center;
  height:inherit;
}

.icon {
  margin: 0 20px 0px 0px;
  cursor:pointer;
}
.right-side-icons-container{
  display:flex;
  gap:10px;
  height:100%;
  align-items:center;
}

.nav-item-text{
  display:none;
  color:$primary-text;
  align-self: end;
}
@media(min-width: $lg){
  .nav-item-text{
    display:block;
  }
}
// cart

.one-product-in-cart{
  display:flex;
  width: 100%;
  gap: 20px;
}
.product-info-container{}

.product-title-container{
    width:100%;
    display: flex;
    gap: 20px;
    justify-content: space-between;
    align-items: center;

    .title{
      color:$base-color;
      font-weight: 450;
      font-size: 17px;
    }
}
.product-amount-price-container{
  display:flex;
  gap:5px;
  align-items: center;

  .price{
    color:$base-color;
    font-weight: 500;
    font-size: 18px;
  }
}
.account-dropdown.cart{
  width: 270px;
}
.account-list.cart-list{
  padding-bottom:15px;
  border-bottom:1px solid #ccc;
}
.total-cart{
  margin-top: 5px;
  display:flex;
  justify-content: space-between;
  align-items: center;
  .total{
    color: #9b9b9b;
    font-weight: 500;
    font-size: 17px;
  }
  .price{
    font-weight: 500;
    font-size: 18px;
    color: $base-color;
  }
}

.cart-buttons{
  display:flex;
  justify-content: space-between;
}
.primary-button{
  @include submit-button;
  width: 70px;
  padding: 4px 0;
  border-radius: 2px;
  font-size: 14px;
}

.inversed-primary-button{
  @include inversed-primary-button;
  width: 70px;
  padding: 8px 0px;
  border-radius: 2px;
  font-size: 14px;
}


.account-dropdown.cart:has( fade-container:hover){
  opacity:1;
  bottom:-230px;
  visibility: visible;
}
.account-dropdown.cart:hover{
  opacity:1;
  bottom:-230px;
  visibility: visible;
}

.account-dropdown.cart{
  bottom:-230px;
  width:290px;
}
//user
.fade-container{
  display:flex;
  position: relative;
  align-items: center;
  cursor:default;
  visibility: visible;
}
.trigger-fade{
  cursor:pointer;
}
.fade-container:hover{
  cursor:pointer;
}
.fade-container:hover .account-dropdown.cart{
  opacity:1;
  bottom:-210px;
  visibility: visible;
}

.fade-container:hover .account-dropdown{
  opacity:1;
  bottom:-215px;
  visibility: visible;
}

//@keyframes slideUp {
//  from{
//    bottom:-195px;
//    opacity:0;
//  }
//
//  to{
//    bottom:-180px;
//    opacity:1;
//  }
//}


.account-dropdown{
  position: absolute;
  background: #fff;
  visibility: hidden;
  opacity:0;
  right:0;
  bottom:-230px;
  padding:20px 15px;
  width:150px;
  border-radius: 15px;
  border:1px solid #eee;

  transition: all 0.3s ease-in;
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.1);


}
.account-dropdown:hover{
  opacity:1;
  bottom:-215px;
  visibility: visible;
}
.account-list{
  display: flex;
  flex-direction: column;
  gap: 3px;

  .list-item:hover{
    color:#0DA487;
    cursor:pointer;
    width: 100%;
  }
}

.background-for-icon{
  border-radius:50%;
  background: #def9ec;
  height:32px;
  width:32px;
  .container{
    display:flex;
    justify-content: center;
    align-items: center;
    cursor:pointer;
  }
}

// drawer

.MuiDrawer-paper {
  width: 100%;
  max-width:380px;
}

.drawer {
  width:85%;
  margin: 0 auto;


  .modal-header {
    display:flex;
    justify-content: space-between;
    align-items:center;
    margin:20px 0

  }
  .form{
    position:relative;
  }

  .input-drawer-label{

    display:flex;

    .input-drawer{
      padding:15px 30px;
      background-color:#f2f3f4;
      width:100%;
      outline:0;
      border: 1px solid transparent;
      border-radius:10px;
    }
    .input-drawer::placeholder{
      color:black;
      font-size: 0.9rem;
    }
    .input-drawer:focus{
      border: 1px solid #213547;
    }
    .icon{
      padding:16px 6px;
      position: absolute;
      right: 0;
      top:50%;
      transform: translate(25%, -50%);
    }
  }
  .links{
    margin-top:1rem;
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap:7px;
    font-size: 1.3rem;

    .active{
      color:$base-color;
    }
    a {
      display:flex;
      color:black;
      justify-content:center;
      width: 100%;
    }
    p{
      display: inline-block;
      border-bottom: 2px solid transparent;
    }
    a:hover >  p {
      border-bottom: 2px solid $base-color;
    }
  }
}


// md screen

@media (min-width:$sm) {
    .container{
      max-width: $sm;
      margin:0 auto;
    }
}

@media(min-width: $md){
  .container{
    max-width: $md;

  }
}
@media(min-width: $lg){
  .container{
    width: 85%;
    max-width: $lg;
  }
}
@media(min-width:$xl){
  .container{
    width:85%;
    max-width:85%;
  }
}

